# ChatServer

./: CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/model/: group.hpp  groupuser.hpp  user.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/database/: database.cpp
src/server/model/: friendmoel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/jsontest/: jsontest  jsontest.cpp
test/muduotest/: CMakeLists.txt  muduo_server.cpp  tips.txt
